# packyak

./: .gitignore  .pylintrc  README.md  README.old.md  biome.json  cdk.json  dev.md  example.py  package.json  packyak.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  tsconfig.base.json  tsconfig.json  tsconfig.packyak.json  tsconfig.packyak.synth.json  tsconfig.yakka.json
.quarkus/cli/plugins/: quarkus-cli-catalog.json
create-packyak/: tsconfig.json
create-packyak/src/: index.ts
examples/: app.py
examples/clear-linux/: cdk.context.json  package.json  packyak.config.ts
examples/streamlit-aws-cdk/: .dockerignore  Dockerfile  README.md  cdk.json  package.json  packyak.config.py  packyak.config.ts  pyproject.toml  tsconfig.json  yakka.ts
examples/streamlit-aws-cdk/app/: __init__.py  __main__.py  app.py  home.py  spark_job.py  videos.py
examples/streamlit-aws-cdk/app/pages/: chat.py
examples/streamlit-aws-cdk/app/resources/: __init__.py
examples/streamlit-aws-cdk/my_app/: __init__.py  home.py  spark_job.py
examples/streamlit-aws-cdk/my_app/pages/: chat.py
examples/streamlit-aws-cdk/notebooks/: nessie.ipynb  spark.ipynb
packyak/: __init__.py  aws-cdk.ts  binding.py  bucket.py  bundle.ts  cron.py  duration.py  every.py  folder.py  function.py  globals.py  init.py  queue.py  reflect.py  registry.py  resource.py  spec.py  sync.py  synth.py
packyak-aws-cdk/: .env.example  .gitignore  .jsii  .npmignore  README.md  package.json  tsconfig.jsii.json  tsconfig.json  tsconfig.ref.json
packyak-aws-cdk/scripts/: debug-docker.sh  install-docker-compose.sh  install-github-cli.sh  install-nvidia-container-toolkit.sh  install-nvidia-drivers.sh  install-poetry.sh  install-pyenv.sh  install-ssm-agent.sh  install-vs-code.sh  mount-efs.sh  mount-yarn-cgroups.sh  release.sh  setup-hadoop-users.sh  write-env-variables.sh
packyak-aws-cdk/src/: bind.ts  dagster.ts  dns-configuration.ts  experimental.ts  export-requirements.ts  index.ts  lakehouse.ts  packyak-resource.ts  python-poetry.ts  ray.ts  sst-compat.ts  streamlit-site.ts  version.ts
packyak-aws-cdk/src/clear/: index.ts  instance.ts
packyak-aws-cdk/src/emr/: application.ts  block-device.ts  bootstrap-action.ts  catalog.ts  cluster.ts  configuration.ts  fleet-cluster.ts  glue-catalog.ts  instance-fleet.ts  instance-group.ts  instance-market.ts  jdbc.ts  managed-scaling.ts  market.ts  python-version.ts  release-label.ts  scala-version.ts  spark-cluster.ts  spark-config.ts  spark-sql-extension.ts  spark-version.ts  step.ts  uniform-cluster.ts
packyak-aws-cdk/src/emr/dask/: bootstrap.sh  dask.ts
packyak-aws-cdk/src/home/: home.ts  user.ts  users.ts
packyak-aws-cdk/src/nessie/: base-nessie-catalog.ts  nessie-config.ts  nessie-ecs-catalog.ts  nessie-ecs-service.ts  nessie-lambda-catalog.ts  nessie-version-store.ts
packyak-aws-cdk/src/sagemaker/: delete-domain.ts  domain.ts  sage-maker-image.ts  user-profile.ts
packyak-aws-cdk/src/sagemaker/cleanup/: index.ts
packyak-aws-cdk/src/workspace/: group.ts  home.ts  workspace.ts
packyak-docs/: package.json
packyak-docs/blog/: 2024-01-20-Lakehouses.md  2024-01-21-DeltaLake_vs_Iceberg_vs_Hudi.md  2024-01-22-Data_Lineage.md  authors.yml
packyak-nessie/: README.md  build.gradle.kts  gradle.properties
packyak-nessie/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
packyak/asset/: asset.py  manifest.py  namespace.py  partition_key.py  source.py
packyak/aws-cdk/: dagster.ts  experimental.ts  export-requirements.ts  index.ts  lakehouse.ts  streamlit-site.ts
packyak/aws-cdk/dagster/: Dockerfile  dagster.ts
packyak/aws-cdk/nessie/: base-nessie-service.ts  nessie-config.ts  nessie-ecs-service.ts  nessie-serverless-service.ts  nessie-version-store.ts
packyak/aws-cdk/sagemaker/: domain.ts  sage-maker-image.ts
packyak/cli/: __init__.py  __main__.py  cli.py  clusters.py  instances.py  list.py  logs.py  materialize.py  new.py  node_type.py  run.py  ssh.py  synth.py  tunnel.py
packyak/dagster/: aws-batch-launcher.py
packyak/messaging/: queue.py
packyak/runnable/: binding.py  cluster.py  function.py  job.py  pool.py  runnable.py
packyak/runtime/: binding.py  cluster.py  function.py  integration.py  job.py
packyak/scheduling/: cron.py  every.py
packyak/spark/: __init__.py  session.py
packyak/storage/: bucket.py  folder.py
packyak/streaming/: queue.py
packyak/synth/: __init__.py  __main__.py  analyze.py  call.py  file_utils.py  loaded_module.py  synth.py
packyak/util/: emr.py  fqn.py  git.py  typed_resource.py
packyak/web/: streamlit-site.py
pacykay-hypervisor/: Cargo.toml
refinery/: __init__.py  binding.py  bucket.py  decorator.py  folder.py  function.py  integration.py  mocks.py  queue.py  reflect.py  resource.py  spec.py  synth-aws-cdk.ts  synth.py
refinery/synth/: aws_cdk.py  aws_pulumi.py  local.py  modal.py
scripts/: bump.mjs  codegen.py  publish.sh  python  ssh-tunnel.sh
yakka/: __init__.py  aws-cdk.ts  binding.py  bucket.py  folder.py  function.py  globals.py  integration.py  memoize.py  queue.py  reflect.py  resource.py  spec.py  synth.py  typed_resource.py
