[tool.poetry]
name = "app"

version = "0.1.0"
description = ""
authors = ["sam <sam@packyak.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
streamlit = "^1.29.0"
packyak = { path = "../../" }
# packyak = "0.1.2"
types-aiobotocore = { extras = ["essential"], version = "^2.9.0" }
aioboto3 = "^12.1.0"
pynessie = "^0.66.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
