[tool.poetry]
name = "my_app"

version = "0.1.0"
description = ""
authors = ["sam <sam@packyak.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
aioboto3 = "^12.1.0"
packyak = { path = "../../" }
pynessie = "^0.66.0"
python = "3.10.13"
streamlit = "^1.29.0"
types-aiobotocore = { extras = ["essential"], version = "^2.9.0" }

[tool.poetry.group.dev.dependencies]
packyak-aws-cdk = { file = "../../packyak-aws-cdk/lib.jsii/python/packyak_aws_cdk-0.4.0-py3-none-any.whl" }
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
